Moved Contact to Root Controller, updated ContactFormModel, Updated Resources, Updated MailServices, so they supporting Attachments, Smaller other fixes.

--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -27,11 +27,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 @section scripts {
     <script src="~/lib/lodash/lodash.js"></script>
-
 }
 <div class="row">
     <div class="col-lg-3 hidden-sm-down">
-        <img src="~/Sascha1.jpg" class="img-fluid img-rounded" alt="Sascha Manns" />
+        <img src="~/img/me/Sascha1.jpg" class="img-fluid img-rounded" alt="Sascha Manns" />
     </div>
     <div class="col-lg-9 col-sm-12 col-xs-12">
         <h3>Bio</h3>
@@ -42,21 +41,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <h4>@_localizer["connect"]</h4>
         <ul class="list-unstyled">
             <li><a href="mailto:Sascha.Manns@@outlook.de"><i class="fas fa-envelope"></i> Sascha.Manns@outlook.de</a></li>
-            <li><a href="https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x496ed69e19f956dc7784d79cffa8021619dd0900" target="_blank"><i class="fas fa-lock"></i> 0x496ed69e19f956dc7784d79cffa8021619dd0900</a></li>
-            <li><a rel="me" href="https://mastodon.social/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
+            <li><a href="http://keyserver.ubuntu.com/pks/lookup?search=83750b413dce232eb3340447b28b6b1b27102983&fingerprint=on&op=index" target="_blank"><i class="fas fa-lock"></i> 0x83750b413dce232eb3340447b28b6b1b27102983</a></li>
             <li><a href="https://twitter.com/saigkill" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a></li>
             <li><a href="https://www.facebook.com/sascha.manns" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
             <li><a href="https://instagram.com/sascha.manns" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
             <li><a href="https://www.linkedin.com/in/saigkill/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a href="https://blazot.com/saigkill" target="_blank"><img src="https://blazot.com/images/blazotsquarelogo.svg" width="2%" /> Blazot</a></li>
             <li><a href="https://www.amazon.de/-/e/B07J3CPKR1" target="_blank"><i class="fab fa-amazon"></i> @_localizer["amazon-page"]</a></li>
             <li><a href="skype:schurik0815"><i class="fab fa-skype"></i> Skype</a></li>
             <li><a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" target="_blank"><i class="fab fa-xing-square"></i> XING</a></li>
             <li><a href="https://www.last.fm/user/illuminatus1979" target="_blank"><i class="fab fa-lastfm-square"></i> Last.fm</a></li>
             <li><a href="https://dev.to/saigkill" title="Dev.to Community"><i class="fab fa-dev"></i> Dev.to</a></li>
             <li><a href="https://www.reddit.com/user/saigkill"><i class="fab fa-reddit-square"></i> Reddit</a></li>
-            <li><a href="https://discord.com/channels/@@saigkill0#6514" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
+            <li><a href="https://discord.com/channels/@@saigkill001#3216" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
             <li><img src="~/img/social/element-matrix.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"> Matrix: @@saigkill0:matrix.org</li>
+            <li><a rel="me" href="https://social.linux.pizza/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
             <li><a href="https://steamcommunity.com/id/saigkill/"><i class="fab fa-steam-square"></i> Steam</a></li>
         </ul>
         <h4>@_localizer["coding-activity"]</h4>
@@ -72,11 +70,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <h4>@_localizer["supporter"]</h4>
         <div id="besupporter">
             <ul class="list-unstyled">
-                <li><a target="_blank" href="https://www.buymeacoffee.com/PE0y8DF"><img src="~/img/misc/buymeacoffee.jpg" alt="Buy me a coffee" width="12%"></a></li>
-                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD"><img src="~/img/misc/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
-                <li><a href="https://paypal.me/SaschaManns" target="_blank"><img src="~/img/misc/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
-                <li><a href="https://www.patreon.com/saigkill"><img src="~/img/misc/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a target="_blank" href="https://www.buymeacoffee.com/PE0y8DF"><img src="~/img/badges/buymeacoffee.jpg" alt="Buy me a coffee" width="12%"></a></li>
+                <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD"><img src="~/img/badges/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://paypal.me/SaschaManns" target="_blank"><img src="~/img/badges/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
+                <li><a href="https://www.patreon.com/saigkill"><img src="~/img/badges/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
                 <li><a href="https://liberapay.com/saigkill/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
+                <li><a href="https://www.syncfusion.com"><img src="https://cdn.syncfusion.com/content/images/Logo/Logo_150dpi.png"</a></li>
             </ul>
         </div>
     </div>
@@ -84,15 +83,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <hr />
 <div class="row">
     <div class="col-lg-6">
-        <h4>@_localizer["publications"]</h4>
-        <div class="card">
-
-            @foreach (var pub in _pubs.Get())
-            {
+        <h4 class="center-text">@_localizer["publications"]</h4>
+        @foreach (var pub in _pubs.Get())
+        {
+            <div tabindex="0" class="e-card" id="basic">
                 <div class="card-header">
-                    <h4 class="card-subtitle"><a href="@pub.Link" target="_blank">@pub.Title</a></h4>
+                    <div class="e-card-header-caption">
+                        <h4 class="card-subtitle"><a href="@pub.Link" target="_blank">@pub.Title</a></h4>
+                    </div>
                 </div>
-                <div class="card-body">
+                <div class="e-card-content">
+
                     <div class="card-text"><small>@pub.Comments</small></div>
                     <div class="card-text"><small>@pub.PublicationName - @pub.Publisher</small></div>
                     @if (!string.IsNullOrWhiteSpace(pub.Identifier))
@@ -104,13 +105,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <div class="muted"><small>@_localizer["publisher-published"]: @pub.DatePublished</small></div>
                     }
                 </div>
-            }
-
-        </div>
+            </div>
+        }
     </div>
     <div class="col-lg-6">
-        <h4>@_localizer["opensource"]</h4>
-        <div class="card" id="openSourceList">
+        <h4 class="center-text">@_localizer["opensource"]</h4>
+        <div class="" id="openSourceList">
         </div>
+        <style>
+            .e-card {
+                width: 550px;
+                margin: auto;
+            }
+        </style>
     </div>
 </div>
