--- a/src/MannsBlog/Views/Root/Imprint.cshtml
+++ b/src/MannsBlog/Views/Root/Imprint.cshtml
@@ -34,7 +34,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <p><strong>@_localizer["contact-form"]:</strong> <a href="https://saschamanns.de/contact" target="_blank">https://saschamanns.de/contact</a></p>
 <h2 id="m154">@_localizer["journalistic"]</h2><p><strong>@_localizer["responsibility"]:</strong> Sascha Manns (@_localizer["adress"])</p>
 <h2 id="m172">@_localizer["socialmedia"]</h2><p><strong>@_localizer["other"]:</strong> </p>
-<p><a href="https://mastodon.social/@@saigkill" target="_blank">https://mastodon.social/@@saigkill</a></p>
+<p><a href="https://social.linux.pizza/@@saigkill" target="_blank">https://social.linux.pizza/@@saigkill</a></p>
 <p><a href="https://www.facebook.com/sascha.manns" target="_blank">https://www.facebook.com/sascha.manns</a></p>
 <p><a href="https://twitter.com/saigkill" target="_blank">https://twitter.com/saigkill</a></p>
 <p><a href="https://instagram.com/sascha.manns" target="_blank">https://instagram.com/sascha.manns</a></p>
