--- a/src/MannsBlog/Views/Shared/_Info.cshtml
+++ b/src/MannsBlog/Views/Shared/_Info.cshtml
@@ -14,42 +14,44 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *@
-@inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment _env
+@inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment env
 @using System.Runtime.InteropServices
 @using Microsoft.DotNet.PlatformAbstractions
 @using System.Reflection
 
 <div class="container">
     <div class="row">
-        <button class="btn btn-sm btn-info-outline" data-toggle="collapse" data-target="#info-table">Show Info</button>
-        <div class="collapse" id="info-table">
-            <div class="col-md-12">
-                <table class="table table-sm table-striped">
-                    <tr>
-                        <td>Application Name</td>
-                        <td><strong>@_env.ApplicationName</strong></td>
-                        <td>Environment Name</td>
-                        <td><strong>@_env.EnvironmentName</strong></td>
-                    </tr>
-                    <tr>
-                        <td>Application Ver</td>
-                        <td><strong>@Assembly.GetAssembly(typeof(MannsBlog.Startup))?.GetName().Version</strong></td>
-                        <td>Runtime Framework</td>
-                        <td><strong>@(Microsoft.DotNet.PlatformAbstractions.RuntimeEnvironment.RuntimeArchitecture)</strong></td>
-                    </tr>
-                    <tr>
-                        <td>App Path</td>
-                        <td><strong>@ApplicationEnvironment.ApplicationBasePath</strong></td>
-                        <td>Runtime Version</td>
-                        <td><strong>@RuntimeInformation.FrameworkDescription</strong></td>
-                    </tr>
-                    <tr>
-                        <td>Operating System</td>
-                        <td><strong>@RuntimeInformation.OSDescription</strong></td>
-                        <td>Runtime Arch</td>
-                        <td><strong>@RuntimeInformation.ProcessArchitecture</strong></td>
-                    </tr>
-                </table>
+        <div>
+            <div>
+                <button class="btn" id="info-table-btn">Show Info</button>
+                <div class="hidden" id="info-panel">
+                    <table class="text-xs border w-full">
+                        <tr>
+                            <td>Application Name</td>
+                            <td><strong>@env.ApplicationName</strong></td>
+                            <td>Environment Name</td>
+                            <td><strong>@env.EnvironmentName</strong></td>
+                        </tr>
+                        <tr>
+                            <td>Application Ver</td>
+                            <td><strong>@Assembly.GetAssembly(typeof(MannsBlog.Startup))?.GetName().Version</strong></td>
+                            <td>Runtime Framework</td>
+                            <td><strong>@(Microsoft.DotNet.PlatformAbstractions.RuntimeEnvironment.RuntimeArchitecture)</strong></td>
+                        </tr>
+                        <tr>
+                            <td>App Path</td>
+                            <td><strong>@ApplicationEnvironment.ApplicationBasePath</strong></td>
+                            <td>Runtime Version</td>
+                            <td><strong>@RuntimeInformation.FrameworkDescription</strong></td>
+                        </tr>
+                        <tr>
+                            <td>Operating System</td>
+                            <td><strong>@RuntimeInformation.OSDescription</strong></td>
+                            <td>Runtime Arch</td>
+                            <td><strong>@RuntimeInformation.ProcessArchitecture</strong></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
