--- a/src/MannsBlog/Views/Videos/Index.cshtml
+++ b/src/MannsBlog/Views/Videos/Index.cshtml
@@ -29,9 +29,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     videotarget = culture == "de-DE" ? "video-de" : "video";
 
     bool isDevelopment = false;
-    if (Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT") == "Development") {
+    if (Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT") == "Development")
+    {
         isDevelopment = true;
-    } 
+    }
 
     string cleanedtarget = String.Empty;
     if (isDevelopment)
