--- a/src/MannsBlog/wwwroot/css/fonts.css
+++ b/src/MannsBlog/wwwroot/css/fonts.css
@@ -49,3 +49,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     src: local('Segoe UI Light'), local('SegoeUILight'), url(../fonts/TTF/segoeuil.ttf) format('ttf');
     /* unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; */
 }
+
+@font-face {
+    font-family: 'Space Grotesk Light';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Space Grotesk Light'), local('SpaceGroteskLight'), url(../fonts/TTF/SpaceGrotesk-VariableFont_wght.ttf) format('ttf');
+    /* unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; */
+}
