--- a/src/MannsBlog/wwwroot/css/site.css
+++ b/src/MannsBlog/wwwroot/css/site.css
@@ -202,6 +202,7 @@ body {
 
 .e-card e-card-content {
     width: 700px;
+    /*height: 100px;*/
     height: 100px;
 }
 
@@ -212,6 +213,7 @@ body {
 .e-card {
     width: 1100px;
     margin: auto;
+    height: auto;
 }
 
 .fa-hover-spin:hover {
@@ -301,11 +303,6 @@ body {
 
 .page-link {
     color: #003772;
-}
-
-.pluralsight-logo.pluralsight-logo-small {
-    margin-left: -3px;
-    max-width: 18px;
 }
 
 .post-card blockquote p a {
